# sql_rag

./: .gitignore  main.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: AiChat.tsx  Header.tsx  ResultTable.tsx  SqlEditor.tsx
